# HEC

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile  errors.json  log.txt  users.txt
backend/migrations/: 20260308231442_init.sql  20260308233832_add_servers_and_auth.sql  20260308235837_add_invite_codes.sql  20260309000100_add_channel_name_unique.sql  20260309001140_fix_channel_unique_constraint.sql
backend/src/: db.rs  livekit_auth.rs  main.rs  ws_chat.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Auth.tsx  Chat.tsx  CustomVideoConference.tsx  Modals.tsx  SettingsModal.tsx  Sidebar.tsx  api.ts
frontend/src-tauri/: tauri.conf.json
